# pysubfixer

./: .gitignore  LICENSE  README.md  flake.nix  install.bat  main.py  pyproject.toml  shell.nix  wininstaller.py
nix/: apps.nix  build.nix  pysubfixer.nix  shell.nix
pysubfixer/: __main__.py  cli.py  ffmpeg.py  gui.py  main.py
src/: ffmpeg.py  main.py  pysubfixer.py
src/cli/: __init__.py  cli.py  main.py  subs.py
src/ffmpeg/: __init__.py  exception.py  ffcmd.py  ffmpeg.py  ffprobe.py  process.py
src/gui/: __init__.py  application.py  ffmpeg_button.py  filepathwidget.py  form.py  form_widget.py  main.py  main_window.py  mainwidget.py  numeric_widget.py  numericwidget.py  path_widget.py
