[tool.poetry]
name = "pysubfixer"
version = "0.1.0"
description = "tool to change embedded subtitles"
authors = ["MadMcCrow <do-not-mail.me@please.com>"]
packages = [
        {include = "cli",     from = "src"},
        {include = "private", from = "src"}
    ]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
pysubfixer-cli = 'cli:main'
pysubfixer-gui = 'gui:main'

[build-system]
requires = ["poetry-core>=1.9.1,<3.0"]
build-backend = "poetry.core.masonry.api"