[tool.poetry]
name = "pysubfixer"
version = "0.1.0"
description = "tool to change embedded subtitles"
authors = ["MadMcCrow <do-not-mail.me@please.com>"]
packages = [
        {include = "*", from = "src" },
        {include = "gui", from = "src"}
    ]
readme = "docs/README.md"
license-files = ["docs/LICENSE.md"]

[tool.poetry.dependencies]
python = "^3.11"
PySide6 = "^6.0.0"

[tool.poetry.scripts]
pysubfixer-cli = 'pysubfixer:cli'
pysubfixer-gui = 'pysubfixer:gui'

[build-system]
requires = ["poetry-core>=1.9.1,<3.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-pyinstaller-plugin]
#version = "6.7.0"
#disable-upx = true

# Include metadata from selected packages (including dependencies)
recursive-copy-metadata = [
    "requests"
]

# Include metadata from selected packages
copy-metadata = [
    "boto3"
]

[tool.poetry-pyinstaller-plugin.scripts]
pysubfixer     = "src/pysubfixer.py"
pysubfixer-gui = "src/pysubfixer.py:gui"
pysubfixer-cli = "src/pysubfixer.py:cli"

[tool.poetry-pyinstaller-plugin.collect]
# Collect all submodules, data files & binaries for 'package_A' and 'package_B'
all = ['package_A', 'package_B']